samples/_failures_safe/1761149946_33faa7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6688a933.c: In function ‘main’:
./samples/SAFE/__tmp_6688a933.c:157:9: error: expected declaration or statement at end of input
  157 |         }
      |         ^
./samples/SAFE/__tmp_6688a933.c:157:9: error: expected declaration or statement at end of input
